Favicon: ensure first+clean tags, cache-bust v=4

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="https://base44.com/logo_v2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blipp</title>
-    <link rel="icon" href="/favicon.png" type="image/png" />
-  <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="icon" href="/favicon.png?v=2" type="image/png" />
+  <link rel="apple-touch-icon" href="/favicon.png?v=2" />
   <meta name="theme-color" content="#111111" />
 </head>
   <body>
@@ -14,4 +14,6 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
 
