Favicon: copy-based fallback, cache-bust v=7

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blipp</title>
-    <link rel="icon" href="/favicon.png?v=2" type="image/png" />
-  <link rel="apple-touch-icon" href="/favicon.png?v=2" />
   <meta name="theme-color" content="#111111" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=7" />
+  <link rel="shortcut icon" type="image/png" href="/favicon-32.png?v=7" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=7" />
+  <meta name="theme-color" content="#111111" />
+  <link rel="icon" type="image/png" href="/favicon.png?v=7" />
 </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
 
 
 
