--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blipp</title>
   <meta name="theme-color" content="#111111" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=7" />
-  <link rel="shortcut icon" type="image/png" href="/favicon-32.png?v=7" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=7" />
   <meta name="theme-color" content="#111111" />
-  <link rel="icon" type="image/png" href="/favicon.png?v=7" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=13" />
+  <link rel="shortcut icon" type="image/png" href="/favicon-32.png?v=13" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=13" />
+  <meta name="theme-color" content="#111111" />
 </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
 
 
 
