--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Blipp</title>
   <meta name="theme-color" content="#111111" />
   <meta name="theme-color" content="#111111" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=18" />
-  <link rel="shortcut icon" type="image/png" href="/favicon-32.png?v=18" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=18" />
+  <meta name="theme-color" content="#111111" />
+  <meta name="theme-color" content="#111111" />
+  <meta name="theme-color" content="#111111" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=21" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=21" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=21" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=21" />
   <meta name="theme-color" content="#111111" />
 </head>
   <body>
@@ -16,6 +20,9 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+
+
 
 
 
