Favicon: remove Base44 line; add minimal block (v=32 + marker)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 ﻿<!doctype html>
 <html lang="en">
   <head>
+<!-- BLIPP FAVICON v=32 -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=32" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=32" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=32" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=32" />
+
   <link rel="icon" type="image/x-icon" href="/favicon.ico?v=31" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=31" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=31" />
