--- a/index.html
+++ b/index.html
@@ -20,12 +20,18 @@
   <meta name="theme-color" content="#111111" />
   <meta name="theme-color" content="#111111" />
   <meta name="theme-color" content="#111111" />
+<!-- BLIPP FAVICON v=33 -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=33" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=33" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=33" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=33" />
 </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
 
 
 
