Clean head: single Blipp favicon block (v=40)

--- a/index.html
+++ b/index.html
@@ -1,48 +1,19 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
-<!-- BLIPP FAVICON v=32 -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=32" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=32" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=32" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=32" />
-
-  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=31" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=31" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=31" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=31" />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blipp</title>
-  <meta name="theme-color" content="#111111" />
-  <meta name="theme-color" content="#111111" />
-  <meta name="theme-color" content="#111111" />
-  <meta name="theme-color" content="#111111" />
-  <meta name="theme-color" content="#111111" />
-<!-- BLIPP FAVICON v=33 -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=33" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=33" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=33" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=33" />
-</head>
+
+    <!-- BLIPP FAVICON v=40 -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=40" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=40" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=40" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=40" />
+    <meta name="theme-color" content="#111111" />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
