--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=40" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=40" />
     <meta name="theme-color" content="#111111" />
-    
-    <!-- Google Maps JavaScript API with Places library -->
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_MAPS_API_KEY%&libraries=places">
-    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
+    <!-- Google Maps API will be loaded dynamically by the React component -->
   </body>
 </html>
