--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=40" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=40" />
     <meta name="theme-color" content="#111111" />
+    
+    <!-- Content Security Policy will be set by Vercel headers -->
   </head>
   <body>
     <div id="root"></div>
