feat: Complete landing page redesign and auth system fixes
- Redesigned hero section with full viewport height coverage
- Removed hero CTAs (Get Started/Watch Demo) keeping only header buttons
- Updated header with gradient sliding underlines on nav tabs
- Fixed auth system with proper Supabase singleton and environment handling
- Added transparent logo and improved header styling
- Updated typography with Google Fonts (Outfit/Manrope)
- Fixed OAuth flow and callback handling
- Improved responsive design and visual hierarchy
- Added proper error handling and loading states

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=40" />
     <meta name="theme-color" content="#111111" />
     
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    
     <!-- Content Security Policy will be set by Vercel headers -->
   </head>
   <body>
